integrated front page

--- a/index.html
+++ b/index.html
@@ -1,110 +1,8 @@
+---
+layout: default
+title: Forside
+---
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Varingen</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <!-- Le styles -->
-  <link href="./css/bootstrap.min.css" rel="stylesheet">
-  <link href="./css/bootstrap-responsive.min.css" rel="stylesheet">
-  <link href="./css/newsbaby.css" rel="stylesheet">
-  <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-      <![endif]-->
-
-      <!-- Fav and touch icons -->
-      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-      <link rel="shortcut icon" href="../assets/ico/favicon.png">
-</head>
-
-    <body>
-
-      <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="navbar-inner">
-          <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </a>
-            <a class="visible-phone mobile-logo" href="#"><img src="img/assets/logo-varingen-mobile.gif" width="85" /></a>
-            <div class="nav-collapse collapse">
-              <ul class="nav">
-                <li class=""><a href="#"><i class="icon-user"></i> Logg inn</a></li>
-                <li><a href="#about">Abonnér</a></li>
-                <li><a href="#contact">Sett inn annonse</a></li>
-              </ul>
-            </div><!--/.nav-collapse -->
-          </div>
-        </div>
-      </div>
-
-<!--
-      <header class="header-red">
-        <div class="container visible-desktop">
-          <div class="row">
-            <div class="span3">
-              <img src="http://varingen.no/Portals/11/Varingen/Logo/logo.gif" />
-            </div>
-            <div class="span1">
-              <img src="http://vaer.f-b.no/images/icons/frontpageheader/b_08.png" />
-            </div>
-            <div class="span4">
-              <h4>Hakadal: -14 grader</h4>
-            </div>
-            <div class="span4">
-              <form class="form-search">
-                <input type="text" class="input-medium search-query">
-                <button type="submit" class="btn">Søk</button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </header>
--->
-      <header class="header-white visible-desktop">
-        <div class="container">
-          <div class="row">
-
-            <div class="span3">
-              <img class="logo" src="http://varingen.no/Portals/11/Varingen/Logo/logo.gif" />
-            </div>
-            
-            <div class="searchbox">
-              <form class="form-search">
-                <input type="text" class="input-medium search-query">
-                <button type="submit" class="btn">Søk</button>
-              </form>
-            </div>
-            <div class="weather">
-              <img src="http://vaer.f-b.no/images/icons/frontpageheader/b_08.png" />
-            </div>
-          </div>
-        </div>
-      </header>
-
-    <div class="container menu visible-desktop">
-      <nav>
-        <ul class="no-indent">
-          <li><a href="#">Nyheter</a></li>
-          <li><a href="#">Kultur</a></li>
-          <li><a href="#">Sport</a></li>
-          <li><a href="#">Reportasjer</a></li>
-          <li><a href="#">Meninger</a></li>
-          <li><a href="#">Gratulasjoner</a></li>
-          <li><a href="#">TV Guide</a></li>
-          <li><a href="#">Dette skjer</a></li>
-        <ul>
-      </nav>
-    </div>
 
     <div class="container">
 
@@ -337,13 +235,13 @@
       <div class="row">
         <div class="span10">
           <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="https://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="980" height="600" wmode="opaque" id="td_flash" name="td_flash">
-<param name="movie" value="http://vht.tradedoubler.com/file/199479/2013/w03/w0313_980x600_januarsalg_2a_no.swf">
-<param name="FlashVars" value="clickTAG=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;CLICKTAG=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;clicktag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;clickTag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;ClickTag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006">
-<param name="AllowScriptAccess" value="always">
-<param name="wmode" value="opaque">
-<param name="quality" value="best">
-<param name="menu" value="false">
-<embed src="http://vht.tradedoubler.com/file/199479/2013/w03/w0313_980x600_januarsalg_2a_no.swf" flashvars="clickTAG=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;CLICKTAG=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;clicktag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;clickTag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;ClickTag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006" menu="false" quality="best" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash" swliveconnect="true" width="980" height="600" wmode="opaque" id="td_flash" name="td_flash"></object>
+    <param name="movie" value="http://vht.tradedoubler.com/file/199479/2013/w03/w0313_980x600_januarsalg_2a_no.swf">
+    <param name="FlashVars" value="clickTAG=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;CLICKTAG=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;clicktag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;clickTag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;ClickTag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006">
+    <param name="AllowScriptAccess" value="always">
+    <param name="wmode" value="opaque">
+    <param name="quality" value="best">
+    <param name="menu" value="false">
+    <embed src="http://vht.tradedoubler.com/file/199479/2013/w03/w0313_980x600_januarsalg_2a_no.swf" flashvars="clickTAG=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;CLICKTAG=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;clicktag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;clickTag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;ClickTag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006" menu="false" quality="best" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash" swliveconnect="true" width="980" height="600" wmode="opaque" id="td_flash" name="td_flash"></object>
         </div>
         <div class="span2">
           <img src="holder.js/180x600" />
@@ -354,69 +252,3 @@
 
   </div> <!-- /container -->
 </div>
-
-<footer>
-  <div class="footer-inner container">
-    <div class="row">
-
-      <div class="span3">
-        <h4>Abonnement</h4>
-        <ul>
-          <li><a href="#">Bestill abonnement</a></li>
-          <li><a href="#">Se abonnementsfordeler</a></li>
-          <li><a href="#">Les avisen digitalt</a></li>
-          <li><a href="#">Les avisen på iPad</a></li>
-          <li><a href="#">Les avisen på mobil</a></li>
-          <li><a href="#">Les avisen på iPhone</a></li>
-        </ul>
-      </div>
-
-      <div class="span3">
-        <h4>Kontakt oss</h4>
-        <ul>
-          <li><a href="#">Kontakt oss</a></li>
-          <li><a href="#">Tips oss</a></li>
-          <li><a href="#">Kundeservice</a></li>
-          <li>TLF. 77 77 77 77</li>
-        </ul>
-      </div>
-
-      <div class="span3">
-        <h4>Annonsering</h4>
-        <ul>
-          <li><a href="#">Kundeservice</a></li>
-          <li><a href="#">Sett inn annonse</a></li>
-        </ul>
-      </div>
-
-      <div class="span3">
-        <h4>Om Varingen </h4>
-        <ul>
-          <li>Varingene Copyright &copy; 2013</li>
-          <li>Ansvarlig redaktør: <a href="#">Erling Omvik</a></li>     
-          <li>Nyhetsredaktør: <a href="#">Kari Nordmann</a></li>
-          <li>Nett- og utviklingsredaktør: <a href="#">Ola Nordmann</a></li>
-          <li><a href="http://presse.no/Etisk-regelverk/Redaktoerplakaten">Redaktørplakaten</a></li>
-          <li><a href="http://www.pfu.no/simple.php">PFU</a></li>
-        </ul>
-      </div>
-    </div>
-  </footer>
-  
-
-  <!-- Ads -->
-
-
-      <!--
-      <div class="visible-desktop ads-right">
-        <img src="http://s1.adform.net/Banners/2007196/2007196.gif" />
-      </div>
-    -->
-    <!-- End Ads -->
-
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="./js/bootstrap.js"></script>
-    <script src="./js/holder.js"></script>
-
-  </body>
-  </html>
