add imgs, link up articles

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@ title: Forside
             </header>
             <ul class="no-indent">
               <li class="">
-                <a href="#" class=" webhit_list">
+                <a href="story-b.html" class=" webhit_list">
                   <time>05:06</time>
-                  Tog kjørte inn i hus i Stockholm
+                  Det gode liv i Liverpool
                 </a>
               </li>
               <li class="">
