--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ title: Forside
 
     <hr>
 
-    <div class="container ads visible-desktop">
+    <div class="container front ads visible-desktop">
       <div class="row">
         <div class="span10">
           <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="https://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="980" height="600" wmode="opaque" id="td_flash" name="td_flash">
