--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@ layout: default
 title: Forside
 ---
 
-
-    <div class="container front">
-
-      <div class="main">
+      <div class="main front">
         <!--
         <div class="ad-horizontal">
           <img class="visible-desktop" src="http://s1.adform.net/Banners/2007199/2007199.gif" />
@@ -250,5 +247,4 @@ title: Forside
       <hr>
     </div>
 
-  </div> <!-- /container -->
-</div>
+  </div>
