--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@ layout: default
 title: Forside
 ---
 
-      <div class="main front">
+<div class="ad visible-desktop">
+    <script type="text/javascript">
+        ADTECH_showAd(4199210, document, false);
+    </script>
+    <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://active.macromedia.com/flash2/cabs/swflash.cab#version=5,0,0,0" id="AT_FLASHO4207224" name="AT_FLASHO4207224" width="980" height="150"><param name="movie" value="http://aka-cdn-ns.adtech.de/apps/245/Ad8657653St3Sz1744Sq103799563V0Id3/157582_Torvbyen_Drift_980x150.swf?targetTAG=_blank&amp;clickTarget=_blank&amp;pathTAG=http%3A//aka-cdn-ns.adtech.de/apps/245/Ad8657653St3Sz1744Sq103799563V0Id3/&amp;closeTAG=javascript%3AcloseAdLayer4207224%28%29&amp;openTAG=javascript%3AopenAdLayer4207224%28%29&amp;expandTAG=javascript%3Aexpand4207224%28%29&amp;collapseTAG=javascript%3Acollapse4207224%28%29&amp;clicktarget=_blank&amp;clickTarget=_blank&amp;clickTARGET=_blank&amp;CURRENTDOMAIN=www.f-b.no"><param name="quality" value="autohigh"><param name="base" value="http://aka-cdn-ns.adtech.de/apps/245/Ad8657653St3Sz1744Sq103799563V0Id3/"><param name="flashvars" value="clickTAG=http%3A//adserver.adtech.de/adlink/1361/4207224/0/1744/AdId%3D8657653%3BBnId%3D3%3Bitime%3D340149328%3Bkey%3Dforsiden%3Bnodecode%3Dyes%3Blink%3Dhttp%3A//issuu.com/griffdesign/docs/bylordag_9feb_2013"><param name="allowscriptaccess" value="always"><param name="swLiveConnect" value="true"><param name="wmode" value="opaque"><embed src="http://aka-cdn-ns.adtech.de/apps/245/Ad8657653St3Sz1744Sq103799563V0Id3/157582_Torvbyen_Drift_980x150.swf?targetTAG=_blank&amp;clickTarget=_blank&amp;pathTAG=http%3A//aka-cdn-ns.adtech.de/apps/245/Ad8657653St3Sz1744Sq103799563V0Id3/&amp;closeTAG=javascript%3AcloseAdLayer4207224%28%29&amp;openTAG=javascript%3AopenAdLayer4207224%28%29&amp;expandTAG=javascript%3Aexpand4207224%28%29&amp;collapseTAG=javascript%3Acollapse4207224%28%29&amp;clicktarget=_blank&amp;clickTarget=_blank&amp;clickTARGET=_blank&amp;CURRENTDOMAIN=www.f-b.no" id="AT_FLASHO4207224" name="AT_FLASHO4207224" base="http://aka-cdn-ns.adtech.de/apps/245/Ad8657653St3Sz1744Sq103799563V0Id3/" quality="autohigh" flashvars="clickTAG=http%3A//adserver.adtech.de/adlink/1361/4207224/0/1744/AdId%3D8657653%3BBnId%3D3%3Bitime%3D340149328%3Bkey%3Dforsiden%3Bnodecode%3Dyes%3Blink%3Dhttp%3A//issuu.com/griffdesign/docs/bylordag_9feb_2013" allowscriptaccess="always" swliveconnect="true" width="980" height="150" wmode="opaque" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"></object>
+</div>
+
+<div class="main front">
         <!--
         <div class="ad-horizontal">
           <img class="visible-desktop" src="http://s1.adform.net/Banners/2007199/2007199.gif" />
@@ -209,10 +216,10 @@ title: Forside
         </div>
       </div>
       <hr>
-    </div>
+</div>
 
 
-    <div class="row main">
+<div class="row main">
       <div class="span4 story">
         <h2><a href="#">Jan-Erik Olufsen selger driften av utestedet i Hakadal</a></h2>
         <p>Klarer ikke lenger å håndtere kommunens krav</p>
@@ -224,24 +231,21 @@ title: Forside
       <div class="span4 story">
         <h2><a href="#">- Sjokkerende at Høyrefolk kan komme med en slik påstand om andre partier</a></h2>
       </div>
-    </div>
+</div>
 
-    <hr>
+<hr>
 
-    <div class="container front ads visible-desktop">
+    <div class="front ads visible-desktop">
       <div class="row">
         <div class="span10">
           <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="https://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="980" height="600" wmode="opaque" id="td_flash" name="td_flash">
-    <param name="movie" value="http://vht.tradedoubler.com/file/199479/2013/w03/w0313_980x600_januarsalg_2a_no.swf">
-    <param name="FlashVars" value="clickTAG=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;CLICKTAG=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;clicktag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;clickTag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;ClickTag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006">
-    <param name="AllowScriptAccess" value="always">
-    <param name="wmode" value="opaque">
-    <param name="quality" value="best">
-    <param name="menu" value="false">
-    <embed src="http://vht.tradedoubler.com/file/199479/2013/w03/w0313_980x600_januarsalg_2a_no.swf" flashvars="clickTAG=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;CLICKTAG=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;clicktag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;clickTag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;ClickTag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006" menu="false" quality="best" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash" swliveconnect="true" width="980" height="600" wmode="opaque" id="td_flash" name="td_flash"></object>
-        </div>
-        <div class="span2">
-          <img src="holder.js/180x600" />
+        <param name="movie" value="http://vht.tradedoubler.com/file/199479/2013/w03/w0313_980x600_januarsalg_2a_no.swf">
+        <param name="FlashVars" value="clickTAG=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;CLICKTAG=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;clicktag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;clickTag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;ClickTag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006">
+        <param name="AllowScriptAccess" value="always">
+        <param name="wmode" value="opaque">
+        <param name="quality" value="best">
+        <param name="menu" value="false">
+        <embed src="http://vht.tradedoubler.com/file/199479/2013/w03/w0313_980x600_januarsalg_2a_no.swf" flashvars="clickTAG=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;CLICKTAG=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;clicktag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;clickTag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006&amp;ClickTag=http%3A%2F%2Fannonser.dagbladet.no%2Feas%2Fcu%3D1238%3A%3Acamp%3D31667%3A%3Ano%3D72302%3A%3Akw%3Dlink1-72302%3A%3Auuid%3D7a348872-5f1d-11e2-acc1-002590539953%3A%3AEASLink%3Dhttp%3A%2F%2Fclk.tradedoubler.com%2Fclick%3Fp%3D199479%26a%3D1287085%26g%3D20964648%26pools%3D467006" menu="false" quality="best" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash" swliveconnect="true" width="980" height="600" wmode="opaque" id="td_flash" name="td_flash"></object>
         </div>
       </div>
       <hr>
