--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Forside
         </div>
 
         <div class="row-fluid">
-          <div class="span12 story featured black">
+          <div class="span12 story-teaser featured black">
             <a href="#">
               <img src="http://www.f-b.no/polopoly_fs/truet-med-vapen-og-stakk-av-med-s-nn-2-7.235218!/image/derivative_980/1.7720106.1358024751.jpg" alt="">
             </a>
@@ -35,7 +35,7 @@ title: Forside
         <hr>
 
         <div class="row-fluid">
-          <div class="span4 story">
+          <div class="span4 story-teaser">
             <a href="#">
               <img src="http://www.varingen.no/Portals/11/artikkelbilder/2013/01/201311182821209_3.jpg" alt="">
             </a>
@@ -43,13 +43,13 @@ title: Forside
               <h2>Nittedal IL har alt fått tilbud fra private investorer om kjøp</h2>
             </a>
           </div>
-          <div class="span4 story">
+          <div class="span4 story-teaser">
             <a href="#">
               <img src="http://www.varingen.no/Portals/11/artikkelbilder/2013/01/2013112104548725_3.jpg" alt="">
             </a>
             <h2><a href="#">21 av 54 boliger i Kruttverket Hageby solgt.</a></h2>
           </div>
-          <div class="span4 story most-read">
+          <div class="span4 story-teaser most-read">
 
             <section>
               <h3 class="massive">
@@ -126,7 +126,7 @@ title: Forside
       <hr>
 
       <div class="row-fluid">
-        <div class="span4 story">
+        <div class="span4 story-teaser">
           <img src="https://dl.dropbox.com/u/608153/assets/insta1.png" />
         </div>
         <div class="span8">
@@ -184,7 +184,7 @@ title: Forside
       </div>
       <hr>
       <div class="row-fluid">
-        <div class="span3 story">
+        <div class="span3 story-teaser">
           <h3 class="massive">Gratulerer</h3>
           <div id="myCarousel" class="carousel slide">
             <div class="carousel-inner">
@@ -220,15 +220,15 @@ title: Forside
 
 
 <div class="row main">
-      <div class="span4 story">
+      <div class="span4 story-teaser">
         <h2><a href="#">Jan-Erik Olufsen selger driften av utestedet i Hakadal</a></h2>
         <p>Klarer ikke lenger å håndtere kommunens krav</p>
       </div>
-      <div class="span4 story">
+      <div class="span4 story-teaser">
         <h2><a href="#">En person ble torsdag ettermiddag sendt til legevakt med mindre skader etter elgpåkjørsel</a></h2>
         <p>- Plutselig stod den i veien!</p>
       </div>
-      <div class="span4 story">
+      <div class="span4 story-teaser">
         <h2><a href="#">- Sjokkerende at Høyrefolk kan komme med en slik påstand om andre partier</a></h2>
       </div>
 </div>
