--- a/story-b.html
+++ b/story-b.html
@@ -2,6 +2,12 @@
 layout: default
 title: Det gode liv i Liverpool
 ---
+
+<div class="ad visible-desktop">
+    <iframe src="http://annonser.dagbladet.no/eas?cu=1234;camp=32244;no=73232;cre=mu;ord=1360341241" id="eas_1234_1360341241" width="988" height="150" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">
+    </iframe>
+</div>
+
 <div class="story-body">
     <div class="story-inner" role="main">
         <h1>Det gode liv i Liverpool</h1>
@@ -89,6 +95,11 @@ title: Det gode liv i Liverpool
         <p>En dag eller to går fort nede ved havna. Ikke minst er de kilometerlange promenadene langs Mersey – brolagt med benker og kunst – en opplevelse, om enn ikke laget for stiletthæler. Og selvsagt setter vi av noen timer til Beatles-museet og restaurantmiljøet inne i Albert Dock-kvadraturen. Her kjenner vi pulsen av byen, elva og historien.</p>
     </div>
 </div>
+
+<div class="ad visible-desktop">
+    <img src="http://eas5static.emediate.eu/media/1/86/32335/dagbladetno-dbtoppbanner08022013_norli.jpg">
+</div>
+<br>
 
 
 
