story img width

--- a/index.html
+++ b/index.html
@@ -11,30 +11,24 @@ title: Forside
 </div>
 
 <div class="main front">
-        <!--
-        <div class="ad-horizontal">
-          <img class="visible-desktop" src="http://s1.adform.net/Banners/2007199/2007199.gif" />
+    <div class="visible-phone ads-phone">
+      <img src="http://aka-cdn-ns.adtech.de/images/370/Ad8574322St1Sz1027Sq103692297V0Id2.jpg" />
+    </div>
+
+    <div class="row-fluid">
+      <div class="span12 story-teaser featured black">
+        <a href="story-b.html">
+          <img src="http://www.f-b.no/polopoly_fs/truet-med-vapen-og-stakk-av-med-s-nn-2-7.235218!/image/derivative_980/1.7720106.1358024751.jpg" alt="">
+        </a>
+        <div class="caption">
+          <h2><a href="#">- Vi er sikre på at rett mann er pågrepet</a></h2>
         </div>
-        -->
+      </div>
+    </div>
 
-        <div class="visible-phone ads-phone">
-          <img src="http://aka-cdn-ns.adtech.de/images/370/Ad8574322St1Sz1027Sq103692297V0Id2.jpg" />
-        </div>
+    <hr>
 
-        <div class="row-fluid">
-          <div class="span12 story-teaser featured black">
-            <a href="#">
-              <img src="http://www.f-b.no/polopoly_fs/truet-med-vapen-og-stakk-av-med-s-nn-2-7.235218!/image/derivative_980/1.7720106.1358024751.jpg" alt="">
-            </a>
-            <div class="caption">
-              <h2><a href="#">- Vi er sikre på at rett mann er pågrepet</a></h2>
-            </div>
-          </div>
-        </div>
-
-        <hr>
-
-        <div class="row-fluid">
+    <div class="row-fluid">
           <div class="span4 story-teaser">
             <a href="#">
               <img src="http://www.varingen.no/Portals/11/artikkelbilder/2013/01/201311182821209_3.jpg" alt="">
@@ -119,8 +113,8 @@ title: Forside
               </li>
             </ul>
           </section>
+    </div>
 
-        </div>
       </div>
 
       <hr>
