change iframe for story-b

--- a/story-b.html
+++ b/story-b.html
@@ -4,7 +4,7 @@ title: Det gode liv i Liverpool
 ---
 
 <div class="ad visible-desktop">
-    <iframe src="http://annonser.dagbladet.no/eas?cu=1234;camp=32244;no=73232;cre=mu;ord=1360341241" id="eas_1234_1360341241" width="988" height="150" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">
+    <iframe src="http://annonser.dagbladet.no/eas?cu=1234;camp=32411;no=73480;cre=mu;ord=1360648531" id="eas_1234_1360648531" width="980" height="150" scrolling="no" frameborder="0" marginheight="0" marginwidth="0"></iframe>
     </iframe>
 </div>
 
