starting news section

--- a/buy.html
+++ b/buy.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Varingen</title>
+  <title>Din avis</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -70,15 +70,15 @@
             <form class="bs-docs-example">
               <label class="radio">
                 <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
-                <p><strong>4 uker varingen.no + tablet app</strong> <span class="label label-info">Nå kr 149,-</span></p> 
+                <p><strong>4 uker DinAvis.no + tablet app</strong> <span class="label label-info">Nå kr 149,-</span></p> 
               </label>
               <label class="radio">
                 <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-                <p><strong>Allerede papirabonnent: 4 uker varingen.no + tablet app</strong> <span class="label label-info">Kun kr 49,-</span></p>
+                <p><strong>Allerede papirabonnent: 4 uker DinAvis.no + tablet app</strong> <span class="label label-info">Kun kr 49,-</span></p>
               </label>
               <label class="radio">
                 <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-                <p><strong>Allerede papirabonnent: 4 uker varingen.no + tablet app</strong> <span class="label label-info">Kun kr 49,-</span></p>
+                <p><strong>Allerede papirabonnent: 4 uker DinAvis.no + tablet app</strong> <span class="label label-info">Kun kr 49,-</span></p>
               </label>
               <button type="submit" class="btn btn-primary btn-large">Få tilgang nå</button>
             </form>
