--- a/story-b.html
+++ b/story-b.html
@@ -3,10 +3,10 @@ layout: default
 title: Det gode liv i Liverpool
 ---
 
-<div class="ad visible-desktop">
+<!-- <div class="ad visible-desktop">
     <iframe src="http://annonser.dagbladet.no/eas?cu=1234;camp=32411;no=73480;cre=mu;ord=1360648531" id="eas_1234_1360648531" width="980" height="150" scrolling="no" frameborder="0" marginheight="0" marginwidth="0"></iframe>
     </iframe>
-</div>
+</div> -->
 
 <div class="story-body">
     <div class="story-inner" role="main">
