--- a/b/story.html
+++ b/b/story.html
@@ -5,7 +5,10 @@
 <!--[if IE 9 ]>    <html lang="en" class="ie ie9"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!-->
 <html class=" js no-touch localstorage  display-table enhanced enhanced-rendering fontface" lang="en"><!--<![endif]--><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8"><script src="story_files/beacon.js" async=""></script><script src="story_files/jquery.js"></script>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"><script src="story_files/beacon.js" async=""></script>
+
+<script src="story_files/jquery.js"></script>
+<script src="story_files/holder.js"></script>
 <title>Halloween i Oslo - Nyheter - NewsFront</title>
 <!-- Methode uuid: "8802a02c-06e7-11e1-b8b0-6d27e447c350" -->
 <meta name="eomportal-instanceid" content="16">
@@ -421,7 +424,14 @@ weekend made the annual rite almost impossible on Oct. 31.</p>
 <p>But 5-year-old Dermott Amorim was more than happy to don his 
 Wolverine costume last night and hunt for candy in his neighborhood with
  his family. “We can double trick-or-treat!’’ he said on East Street. </p>
-<div data-adname-complete="true" data-adname="ARTICLE" class="ad aside"><iframe class=" fsaqaexmcfjaogaxnizp" src="story_files/ARTICLE.html" frameborder="0" height="610" scrolling="no" width="310"></iframe></div><p id="skip-target">His
+
+<div data-adname-complete="true" data-adname="ARTICLE" class="ad aside">
+
+  <img src="holder.js/228x618/text:Annonse">
+
+</div>
+
+<p id="skip-target">His
  parents, Peter and Michelle, said it was a second night of 
 trick-or-treating, since they took Dermott and his 3-year-old brother 
 Marco out on Halloween night in nearby Easton. </p>
