--- a/buy.html
+++ b/buy.html
@@ -27,31 +27,6 @@
 
     <body>
 
-      <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="navbar-inner">
-          <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </a>
-            <a class="visible-phone mobile-logo" href="#"><img src="img/assets/logo-varingen-mobile.gif" width="85" /></a>
-            <div class="nav-collapse collapse">
-              <ul class="nav">
-                <li class=""><a href="#"><i class="icon-user"></i> Logg inn</a></li>
-                <li><a href="#about">Abonnér</a></li>
-                <li><a href="#contact">Sett inn annonse</a></li>
-              </ul>
-            </div><!--/.nav-collapse -->
-          </div>
-        </div>
-      </div>
-
-
-      
-
-
-
       <div class="container">
 
         <div class="main">
@@ -59,8 +34,8 @@
           <hr>
 
           <div class="featurette center">
-            <h1 class="featurette-heading">Få umiddelbar tilgang til alt. <span class="muted">Bestill nå!</span></h1>
-            <p class="lead">Din lokalavis på alle plattformer</p>
+            <h1 class="featurette-heading">Få umiddelbar tilgang. <span class="muted">Bestill nå!</span></h1>
+            <p class="lead">Din avis på alle plattformer</p>
           </div>
 
           <hr>
