--- a/news-n.html
+++ b/news-n.html
@@ -8,10 +8,10 @@ title: News section
     <div class="row ">
         <div class="large-4 columns">
             <article class="story-promo">
-                <a href="story-n.html">
+                <a href="buy.html">
                 <img alt="" src="http://gfx.dagbladet.no/labrador/268/268661/26866122/jpg/active/646x270.jpg">
                 <header>
-                    <h1 class="title">- Jeg har egentlig ikke vært meg selv på tre-fire år</h1>
+                    <h1 class="title"><span class="label">Betalt </span> Jeg har egentlig ikke vært meg selv på tre-fire år</h1>
                     <p class="lead">Temperamentet er en styrke, mener Tom Nordlie.</p>
                 </header>       
                 </a>
