newsweekish footer pt 1

--- a/story-n.html
+++ b/story-n.html
@@ -135,7 +135,9 @@ title: News article
                     <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
                 </div>
                 <div class="large-4 columns">
-                    <h5>List of article titles here</h5>
+                    <!-- <h6><a href="#">Unge bruker ikke stemmeretten, de eldre går i fra</a></h6>
+                    <h6><a href="#">- Nå må verden få opp øynene for hva tekstilindustrien gjør med folk</a></h6>
+                    <h6><a href="#">- Nå må verden få opp øynene for hva tekstilindustrien gjør med folk</a></h6> -->
                 </div>
             </div>        
         </article>
