Inline images and quotes for articles

--- a/story-n.html
+++ b/story-n.html
@@ -41,14 +41,13 @@ title: News article
 
                         <p>Mange av de tidligere observatørene er svært kritiske til den norskledede misjonen på Vestbredden, som blant annet beskrives av en som «det ypperste symbolet på den internasjonale samfunnets impotens».</p>
 
-                        <!-- <div class="image-inline">
-                            <figure class="image">
-                                <img alt="" src="http://gfx.nrk.no//j4eilHPOUNWzYpZbsmCkTwzvzkYAXbWzYQrKxuSXSbIw">
-                                <figcaption>
-                                    <p>Merete Ussing jobbet i TIPH i periodene 2004-2005 og 2006-2007. Foto: Brennpunkt / NRK</p>
-                                </figcaption>
-                            </figure>
-                        </div> -->
+                        <figure class="image inline-media">
+                            <img src="http://cdn.thedailybeast.com/content/newsweek/2013/05/29/hackers-are-spying-on-you-inside-the-world-of-digital-espionage/jcr:content/body/image_0.img.1280.1024.jpg/1369821651508.cached.jpg">
+                            <figcaption class="caption">
+                                <span class="credit"> Chris Helgren / Reuters</span>
+                                <p>Julian Assange’s kontroversielle WikiLeaks-prosjekt har fått mange til å bekymre seg.</p>
+                            </figcaption>
+                        </figure> 
 
                         <h2>- Spiker i kista til Oslo-avtalen</h2>
 
@@ -67,10 +66,32 @@ title: News article
                         <h2>- Verre uten observatørene</h2>
 
                         <p>Utenriksminister Espen Barth Eide sier til Brennpunkt at han har stor forståelse for frustrasjonen til de tidligere Hebron-observatørene.</p>
+                        <figure class="image inline-media offset">
+                            <img src="http://cdn.thedailybeast.com/content/newsweek/2013/05/29/hackers-are-spying-on-you-inside-the-world-of-digital-espionage/jcr:content/body/image_0.img.1280.1024.jpg/1369821651508.cached.jpg">
+                            <figcaption class="caption">
+                                <span class="credit"> Fredrik Paus / Reuters</span>
+                                <p>Her brukes offset på bildet. Julian Assange’s kontroversielle WikiLeaks-prosjekt har fått mange til å bekymre seg.</p>
+                            </figcaption>
+                        </figure> 
 
                         <p>- Mange av observatørene har solid politibakgrunn. Deres instinkt er jo å gripe inn når de ser bråk og konflikt mellom mennesker. Så må de i stedet skrive notater, ta bilder og dokumentere. Det er krevende og frustrerende. Men det er premisset for oppdraget.</p>
 
                         <p>- Spørsmålet er ikke om dette er det mest ideelle oppdraget i verden, men om det ville være bedre å ikke gjennomføre det. Jeg tror det ville blitt verre dersom observatørene ble borte, sier Barth Eide.</p>
+
+                        <h2>- Spiker i kista til Oslo-avtalen</h2>
+
+                        <p>TIPH skulle være en midlertidig misjon for å redde Oslo-prosessen etter massakren mot palestinere i Hebron i 1994.</p>
+
+                        <p>Noen av de tidligere observatørene går langt i å antyde at det har gått prestisje for Norge i å opprettholde TIPHs tilstedeværelse på en mer permanent basis.</p>
+
+                        <blockquote class="blockquote">
+                            <div class="quotewrap multiple">
+                                <p>- All of this online intrigue has created a lucrative role for private companies that help victims of hacking play defense.</p>
+                            </div
+                        ></blockquote>
+
+                        <p>- Det er bare ett eneste svar på hvorfor ikke TIPH er lagt ned: Norge samler seg diplomatiske poeng - ingen andre grunner, skriver en anonym TIPH'er fra 1990-tallet.</p>
+
                     </div>
                 </div>
 
