Beginning inline video and author bio

--- a/story-n.html
+++ b/story-n.html
@@ -82,6 +82,16 @@ title: News article
 
                         <p>TIPH skulle være en midlertidig misjon for å redde Oslo-prosessen etter massakren mot palestinere i Hebron i 1994.</p>
 
+                       <!--  <figure class="inline-media offset video" data-mediatype="video" data-mediaprovider="vimeo">
+                            <div class="video-wrapper">
+                                <iframe class="vimeo" src="http://player.vimeo.com/video/67159381?title=0&amp;byline=0&amp;portrait=0" frameborder="0" width="300" height="200" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                            </div>
+                            <figcaption class="caption">
+                                <span class="credit">Vimeo / Per</span>
+                                <p>The past two decades have seen a proliferation of hacking movies—some pure fantasy and others a bit too close to home.</p>
+                             </figcaption>
+                        </figure> -->
+
                         <p>Noen av de tidligere observatørene går langt i å antyde at det har gått prestisje for Norge i å opprettholde TIPHs tilstedeværelse på en mer permanent basis.</p>
 
                         <blockquote class="blockquote">
@@ -93,6 +103,13 @@ title: News article
                         <p>- Det er bare ett eneste svar på hvorfor ikke TIPH er lagt ned: Norge samler seg diplomatiske poeng - ingen andre grunner, skriver en anonym TIPH'er fra 1990-tallet.</p>
 
                     </div>
+
+                   <!--  <div class="author-bio">
+                        <img src="img/fake-author.png" alt="Ola Nordmann">
+                        <h6>Henrik Akselsen</h6>
+                        <p>Henrik Akselsen er utvikler og webprodusent i Front Kommunikasjon AS, og trives godt.</p>
+                    </div> -->
+
                 </div>
 
                 <div class="large-4 columns">
