--- a/search.html
+++ b/search.html
@@ -2,6 +2,25 @@
 layout: zurb
 title: Search
 ---
+<header class="object-header row">
+  <div class="small-12 columns">
+    <form autocomplete="off" id="search-page-form" class="search-page-form">
+      <input type="text" class="search-form-input" name="q" value="obama" autocomplete="off" spellcheck="false">
+    </form>
+
+    <span class="object-header-meta">
+      <span class="object-hed-search-results-count">500 results</span>
+
+      <span class="object-header-rss">
+        <a class="object-header-link " href="/search/?q=obama&amp;format=rss" target="_blank">
+        'obama' RSS
+        </a>
+      </span>
+
+    </span>
+  </div>
+</header>
+
 {% include serp.html %}
 {% include serp.html %}
 {% include serp.html %}
