--- a/story-n.html
+++ b/story-n.html
@@ -133,7 +133,6 @@ title: News article
 
             <footer class="row">
                 <div class="large-12 columns">
-                    <h5>I denne artikkelen</h5>
                     <hr>
                     <dl class="sub-nav">
                       <dd class="active"><a href="#">andre verdenskrig</a></dd>
@@ -141,7 +140,8 @@ title: News article
                       <dd class="active"><a href="#">hebron</a></dd>
                       <dd class="active"><a href="#">UDI</a></dd>
                     </dl>
-                    <div class="meta">
+                    <hr>
+                    <!-- <div class="meta">
                         <div class="by">
                             <strong>Nils Haraldseng, Kristoffer Moelv</strong>
                         </div>
@@ -151,7 +151,7 @@ title: News article
                         <div class="share last">
                             <a href="#">Del med andre</a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </footer>
 
