clean up search

--- a/search.html
+++ b/search.html
@@ -21,6 +21,20 @@ title: Search
   </div>
 </header>
 
+<div class="row">
+  <div class="small-12 columns">
+    <dl class="sub-nav">
+      <dt>Siste:</dt>
+      <dd class="active"><a href="#">Alle</a></dd>
+      <dd><a href="#">7 dager</a></dd>
+      <dd><a href="#">30 dager</a></dd>
+    </dl>
+  </div>
+</div>
+
 {% include serp.html %}
 {% include serp.html %}
 {% include serp.html %}
+<div class="load-more center">
+  <a href="#" class="button">Se flere ...</a>
+</div>
