--- a/search.html
+++ b/search.html
@@ -7,29 +7,25 @@ title: Search
     <form autocomplete="off" id="search-page-form" class="search-page-form">
       <input type="text" class="search-form-input" name="q" value="obama" autocomplete="off" spellcheck="false">
     </form>
-
-    <span class="object-header-meta">
-      <span class="object-hed-search-results-count">500 results</span>
-
-      <span class="object-header-rss">
-        <a class="object-header-link " href="/search/?q=obama&amp;format=rss" target="_blank">
-        'obama' RSS
-        </a>
-      </span>
-
-    </span>
   </div>
-</header>
 
-<div class="row">
-  <div class="small-12 columns">
-    <dl class="sub-nav">
+  <div class="small-3 columns">
+      <span class="result-number">500 treff</span>
+  </div>
+
+  <div class="small-9 columns">
+    <dl class="sub-nav right">
       <dt>Siste:</dt>
       <dd class="active"><a href="#">Alle</a></dd>
       <dd><a href="#">7 dager</a></dd>
       <dd><a href="#">30 dager</a></dd>
     </dl>
   </div>
+
+</header>
+
+<div class="row">
+  
 </div>
 
 {% include serp.html %}
